cluster/values/infrastructure/gateway-envoy/gateway-external-eg.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external-eg
  namespace: gateway-envoy
spec:
  infrastructure:
    annotations:
      metallb.io/address-pool: external
      metallb.io/loadBalancerIPs: 10.20.110.12
  gatewayClassName: eg
  addresses:
  - type: IPAddress
    value: 10.20.110.12
  listeners:
  - name: wildcard-raymol-tls
    protocol: HTTPS
    port: 443
    hostname: "*.raymol.com"
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: wildcard-raymol-tls
    allowedRoutes:
      namespaces:
        from: All
